# fzcomputerai

./: .gitignore  .mcp.json  .npmignore  AGENTS.md  CHANGELOG.md  INSTALL.md  INSTALL_EN.md  README.md  README_EN.md  fzcomcontrol.code-workspace  fzcomputerai.code-workspace  implementation_plan.md  implementation_planV2.md  install.ps1  install.sh  package.json
.github/workflows/: build-release.yml
fzcomputerai/: Cargo.toml
fzcomputerai/src/: app.rs  main.rs
fzcomputerai/src/tabs/: calibration.rs  doctor_skills.rs  driver.rs  mod.rs  network.rs  recording.rs  skills.rs  windows.rs
