[package]
name = "fzcomputerai"
version = "1.0.0"
edition = "2021"
authors = ["Roger Luft <roger@webstorage.com.br>"]
description = "Interface Gráfica Nativa em Rust para FzComputerAI & CUA Driver MCP"
license = "CC-BY-4.0"

[dependencies]
eframe = { version = "0.29.1", default-features = false, features = ["default_fonts", "glow", "winit"] }
egui = { version = "0.29.1", default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
open = "5.3"
